# algorithm-bricks

./: README.md  package-lock.json  package.json
TrueTimeV2/: README.md  WEEDS.md  analysis_with_spec.py  aqm_mesh  aqm_mesh.c  chunk_data.csv  hardware_stats.csv  invasive_stats.csv  mesh_spec.tla  message_stats.csv  metrics.csv  phase_space.csv  position_data.csv  sensor_data.csv  spectral.csv  tape_data.csv
TrueTimeV2/circuit-study/: Makefile  atomic_time.c  atomic_time.h  circuit.c  circuit.h  quantum_sdk_c  random.c  random.h
mesh/: attack.csv  benchmark.csv  mesh  mesh.c  positions.csv  summary.csv  viz.py
proofs-and-theory/other/: README.md
proofs-and-theory/rust/: Cargo.toml  README.md
proofs-and-theory/rust/binder/distributed/crypto/: README.md  access_structure.json  crypto.rs
proofs-and-theory/rust/binder/distributed/key-values/: Cargo.toml  kv.rs
proofs-and-theory/rust/binder/rust-foundation/: README.md  closure.rs  fib_gen.rs
quantum_dist/: .gitignore  Cargo.toml  cpu_divergence  cpu_divergence.c  quantum_dist.rs
src/: Dijkstra.tsx
visual-demos/: README.md
visual-demos/src/: main.tsx
