[package]
name = "femur-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
# For faster RNG used in discrete Laplace noise
rand_distr = "0.5"

# (Optional) For the "mock PIR" interface we show an example trait
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# If you want to do real homomorphic encryption in Rust, you could look at:
#  - https://github.com/zama-ai/concrete
#  - Or your own FFI bindings for Microsoft SEAL, PALISADE, HELib, etc.
